# clipboard-sanitizer

./: Cargo.toml  README.md  build  config.toml
src/: main.rs
